# sapiensai

./: README.md
bloom/: .gitignore  README.md  alembic.ini  auth.config.ts  auth.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  todo.md
bloom/api/: database.py  deps.py  main.py
bloom/api/alembic/: env.py
bloom/api/core/: __init__.py  config.py  dependencies.py  security.py
bloom/api/crud/: __init__.py  base.py  checkup.py  exercise.py  food.py  glucose.py  lab_results.py  patient.py  prenatal_screening.py  profile.py  recommendation.py  ultrasound.py  user.py  vital_signs.py
bloom/api/curd/: user.py
bloom/api/db/: __init__.py  base_class.py  session.py
bloom/api/models/: __init__.py  checkup.py  exercise.py  food.py  glucose.py  lab_results.py  patient.py  prenatal_screening.py  profile.py  recommendation.py  ultrasound.py  user.py  vital_signs.py
bloom/api/schemas/: __init__.py  checkup.py  exercise.py  food.py  glucose.py  lab_results.py  patient.py  prenatal_screening.py  profile.py  recommendation.py  ultrasound.py  user.py  vital_signs.py
bloom/api/services/: openai_service.py
bloom/api/utils/: __init__.py  exceptions.py  snowflake.py  utils.py
bloom/app/: globals.css  layout.tsx  page.tsx
bloom/app/dashboard/: layout.tsx  page.tsx
bloom/app/i18n/: request.ts
bloom/app/lib/: actions.ts  crypto.ts  data.ts  definitions.ts  utils.ts
bloom/app/login/: page.tsx
bloom/lib/: actions.ts
bloom/types/: next-auth.d.ts
bloom/ui/: login-form.tsx  signup-form.tsx
(+107 files in other folders)
